<resources>
    <string name="app_name">UI_PUPMunchMapp</string>
    <string name="appName">PUP MunchMapp</string>
    <string name="tagLine">The food app for PUPians.</string>
    <!--For PreLogin page-->
    <string name="welcomeTo">Welcome to</string>
    <string name="iAm">I am a...</string>
    <string name="customer">Customer</string>
    <string name="stallSeller">Food stall seller</string>
    <!--For log in page-->
    <string name="btntxtLogin">LOG IN</string>
    <string name="txtForgotPassword">Forgot password</string>
    <string name="txtNoAccount">Do not have an account?</string>
    <string name="textSignUp">Sign up now</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="category">Category</string>
    <string name="contactNo">Contact number</string>
    <!--For MainNavigationC fragments-->
    <string name="txtHome">Juan Dela Cruz</string>
    <string name="txtHome1">Home</string>
    <string name="txtOrders">Orders</string>
    <string name="txtUserProfile">User profile</string>
    <!--For Home fragment-->
    <string name="txtChangeView">Change view</string>
    <string name="btnLogOut">Log Out</string>
    <!--For Search fragment-->
    <string name="txtSearch">Search</string>
    <string name="txtSearchQuery">Type any food you want...</string>
    <string name="txtSearchHint">Search here</string>
    <!--For UserProfile fragment-->
    <string name="myProfile">User account details</string>
    <string name="txtEmail">juandc@gmail.com</string>
    <string name="txtUsername">Juan Dela Cruz</string>
    <string name="txtPassword">juandc01</string>
    <string name="txtCategory">Customer</string>
    <string name="txtContactNo">09876543210</string>
    <string name="txtEditProfile">Edit Profile</string>
    <!--For EditProfile fragment-->
    <string name="accountDetails">Account details</string>
    <string name="editProfile">Edit Profile</string>
    <string name="txtUpdate">Update</string>
    <string name="txtEditPic">Edit picture</string>
    <!--For Orders fragment-->
    <string name="txtOrderRefNum">Display order ref num</string>
    <string name="txtOrderStall">Display stall name</string>
    <string name="txtCustomerName">Display customer name</string>
    <string name="txtOrderDate">Date</string>
    <string name="txtOrderTime">Time</string>
    <string name="myOrders">My Orders</string>
    <!--For OrderDetails fragment-->
    <string name="orderDetails">Order details</string>
    <string name="stallName">Stall name:</string>
    <string name="orderRefNum">Reference number:</string>
    <string name="customerName">Customer name:</string>
    <string name="orderTime">Order time:</string>
    <string name="orderDate">Order date:</string>
    <string name="orderedItems">Ordered items</string>
    <!--For order list table-->
    <string name="col1">Number</string>
    <string name="col2">Item name</string>
    <string name="col3">Quantity</string>
    <string name="col4">Price</string>
    <string name="col5">Total</string>
    <!--For Search fragment-->
    <string name="foodNameSearchView">Item name here</string>
    <string name="stallNameSearchView">Stall name here</string>
    <string name="foodPriceSearchView">Price</string>
    <!--For FoodItemDetails fragment -->
    <string name="foodItemDetails">Food Item Details</string>
    <string name="foodName">Item name:</string>
    <string name="foodPrice">Item price:</string>
    <string name="itemDescription">Item description:</string>
    <string name="txtItemDescription">Description of selected item</string>
    <string name="btnPlaceOrder">PLACE ORDER</string>
    <!--For OrderForm fragment -->
    <string name="orderFormH">Order form</string>
    <string name="referenceNum">Reference no.:</string>
    <string name="quantity">Quantity:</string>
    <string name="customerInfo">Customer information</string>
    <string name="fullName">Full name</string>
    <string name="section">Program, Yr. and Sec.</string>
    <string name="contactNum">Contact no.</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <!--For ViewStore fragment -->
    <string name="txtStallName">Bobs Burgers</string>
    <string name="txtStallLocation">Lagoon, PUP MAIN</string>
    <string name="viewLocation">VIEW LOCATION</string>
    <string name="menu">Menu</string>
    <string name="contactDetails">Contact Us</string>
    <string name="phoneNum">Phone no.:</string>
    <string name="email2">Email:</string>
    <string name="socials">Social media page:</string>
    <string name="owner">Store owner:</string>
    <string name="btnConfirmOrder">CONFIRM ORDER</string>

    <!--strings below are from themes.xml-->
    <string name="appname">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Open Navigation Drawer</string>
    <string name="application_logo">Application Logo</string>
    <string name="welcome">Welcome</string>
    <string name="by_category">By Category</string>
    <string name="view_all">View All</string>
    <string name="featured">Featured</string>
    <string name="UN_ProfileFragment">Song Kang</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="enter_your_code">Enter Your Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>