<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/txtHome"
        android:icon="@drawable/homelogo" />

    <item
        android:id="@+id/search"
        android:title="@string/txtSearch"
        android:icon="@drawable/searchlogo"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/orders"
        android:title="@string/txtOrders"
        android:icon="@drawable/orderslogo" />

    <item
        android:id="@+id/userprofile"
        android:title="@string/txtUserProfile"
        android:icon="@drawable/useraccountlogo" />

</menu>