<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".UserProfileFragment">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:src="@drawable/useraccountlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/thirdColor" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonroundborder"
        android:text="@string/txtEditProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUserCategory"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TextView
        android:id="@+id/titleUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEmail" />

    <TextView
        android:id="@+id/titlePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleUserCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/displayCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/inputroundborder"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:paddingVertical="20dp"
        android:text="@string/txtCategory"
        android:textColor="@color/fourthColor"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleUserCategory"
        app:layout_constraintTop_toBottomOf="@+id/displayPassword" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/inputroundborder"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:paddingVertical="20dp"
        android:text="@string/txtEmail"
        android:textColor="@color/fourthColor"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleEmail"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TextView
        android:id="@+id/displayUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/inputroundborder"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:text="@string/txtUsername"
        android:textColor="@color/fourthColor"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleUsername"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <TextView
        android:id="@+id/displayPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/inputroundborder"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:text="@string/txtPassword"
        android:textColor="@color/fourthColor"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/titlePassword"
        app:layout_constraintTop_toBottomOf="@+id/displayUsername"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>